<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_photo_detail"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@drawable/bg_imageview"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/cardviewimage" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/name_detail"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/profile_detail"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_profile_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/value_profile_detail"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_detail"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_detail_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/valuedetail_detail"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/social_media_detail"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iV_youtube"
                android:layout_width="155dp"
                android:layout_height="41dp"
                app:srcCompat="@drawable/youtube"
                android:contentDescription="@string/youtubelink_detail" />
            <ImageView
                android:id="@+id/iV_twitter"
                android:layout_width="155dp"
                android:layout_height="41dp"
                app:srcCompat="@drawable/twitter"
                android:contentDescription="@string/youtubelink_detail" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>